[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_data_lab"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "LLMを活用したデータ分析ツール"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    # データ分析基本パッケージ
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openpyxl>=3.1.0",

    # 機械学習パッケージ
    "scikit-learn>=1.2.0",
    "torch>=2.0.0",
    "lightgbm>=4.0.0",

    # LLM関連パッケージ
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "accelerate>=0.20.0",

    # ユーティリティ
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "ruff==0.9.1",
    "jupyter>=1.0.0",
    "notebook>=6.5.4",
]

[project.urls]
"Homepage" = "https://github.com/karaage0703/llm-data-lab"
"Bug Tracker" = "https://github.com/karaage0703/llm-data-lab/issues"

[tool.setuptools]
# パッケージディスカバリーを無効化
packages = []

[tool.ruff]
line-length = 128
select = ["E", "F", "B", "I"]
ignore = []